Vertical alignment for delete button fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,13 +54,15 @@ h1
 
 }
 .Done{
-  margin-left: 130px;
+
   background-color: whitesmoke;
 
 }
 .delete
 {
-  margin-left: 80px;
+  display: table;
+  margin-left: 500px;
+  margin-top: -40px;
   background-color: whitesmoke;
 }
 .task-list{
